--- a/zsrr37/localisation/ideas_l_polish.yml
+++ b/zsrr37/localisation/ideas_l_polish.yml
@@ -667,6 +667,11 @@
  ZSO_adam_bojanowski:0 "Adam Bojanowski"
  ZSO_henryk_giergielewicz:0 "Henryk Giergielewicz"
  ZSO_tadeusz_cyganski:0 "Tadeusz Cygański"
+ ZSO_iwona_brynda:0 "Iwona Brynda"
+ ZSO_leszek_zakrzewski:0 "Leszek Zakrzewski"
+ ZSO_michal_polakg:0 "Michał Polak"
+ ZSO_elzbieta_rejniakg:0 "Elżbieta Rejniak"
+ ZSO_zdzislaw_woch:0 "Zdzisław Woch"
  POL_generic_fascist_demagogue:0 "Roman Dmowski"
  POL_generic_communist_revolutionary:0 "Stanisław Radkiewicz"
  POL_generic_democratic_reformer:0 "Mieczysław Michałowicz"
@@ -2566,3 +2571,10 @@
  GER_national_revitalization2:0 "Odnowienie krajowe"
  GER_national_revitalization3:0 "Odnowienie krajowe"
  GER_national_revitalization4:0 "Odnowienie krajowe"
+ ZSO_helikopter:0 "Helikopter"
+ ZSO_helikopter_desc:0 "Do szkoły został przyjęty niejaki Mateusz, osoba głęboko zainteresowana hydrauliką i lubiąca się chwalić przyrodzeniem. Trzeba go ujarzmić, jeśli chcemy żeby szkoła mogła normalnie funkcjonować."
+ ZSO_szkola_dla_elity:0 "Szkoła dla elity"
+ ZSO_polak:0 "Dyktatura Michała Polaka"
+ ZSO_samorzadowcy:0 "Koalicyjny rząd nauczycieli i Samorządu"
+ ZSO_komuchy:0 "Dyktatura uczniowska"
+ ZSO_status_quo:0 "Stary porządek"
