--- a/zsrr37/localisation/traits_l_polish.yml
+++ b/zsrr37/localisation/traits_l_polish.yml
@@ -8,9 +8,6 @@
  democratic_reformer_desc:0 "Polityk ten wierzy, że obywatele powinni sami decydować o własnym losie, i pragnie zwiększyć wpływ ludzi na władzę, która ma ich reprezentować."
  fascist_demagogue:0 "Faszystowski demagog"
  fascist_demagogue_desc:0 "Ten polityk pragnie silnego państwa popieranego przez wszystkich obywateli i używa nacjonalistyczno-militarystycznej retoryki."
- wehraboo:0 "Wehraboo"
- smieszkomunista:0 "Smieszkomunista"
- biznesmejker:0 "Biznesmejker"
  ideological_crusader:0 "Bojownik o sprawę"
  popular_figurehead:0 "Popularny figurant"
  silent_workhorse:0 "Cichy pracuś"
@@ -29,10 +26,6 @@
  military_theorist:0 "Teoretyk wojskowości"
  air_warfare_theorist:0 "Teoretyk lotnictwa"
  naval_theorist:0 "Teoretyk marynarki"
- lowca_radzieckich_krukow:0 "Łowca radzieckich kruków"
- jak_strzelac_lufy:0 "Jak strzelać lufy"
- wuefista:0 "Wuefista"
- ma_gadane:0 "Ma gadane"
  tank_manufacturer:0 "Projektant czołgów"
  artillery_manufacturer:0 "Projektant artylerii"
  infantry_equipment_manufacturer:0 "Projektant wyposażenia piechoty"
@@ -470,3 +463,14 @@
  expert_improviser_movement_bonus_on_land:0 "Premia do poruszania się na lądzie: §G+10%§!"
  TRAIT_NOT_ACTIVE_WHEN_COMMANDING_AN_ARMY:0 "§RSpecjalizacja nie działa podczas dowodzenia armią.§!"
  armored_ratio_over_40:0 "Udział czołgów > §H40% §!"
+ wehraboo:0 "Wehraboo"
+ smieszkomunista:0 "Śmieszkomunista"
+ biznesmejker:0 "Biznesmejker"
+ lowca_radzieckich_krukow:0 "Łowca radzieckich kruków"
+ wuefista:0 "Wuefista"
+ ma_gadane:0 "Ma gadane"
+ ma_odloty:0 "Ma odloty"
+ cisckrieg:0 "Cisckrieg"
+ swiatlowody_ftw:0 "Światłowody FTW"
+ polonistka:1 "Polonistka"
+ kierownik_praktyk:1 "Kierownik szkolenia"
