Fascism on the rise
Początek rozwoju drzewka faszystowskiego

--- a/zsrr37/localisation/ZSO_osiecka_focus_l_polish.yml
+++ b/zsrr37/localisation/ZSO_osiecka_focus_l_polish.yml
@@ -13,3 +13,7 @@ ZSO_zwycistwosamorzdowcw:0 "Zwycięstwo samorządowców"
 ZSO_zwycistwosamorzdowcw_desc:0 ""
 ZSO_zwycistwostaregoporzdku:0 "Zwycięstwo starego porządku"
 ZSO_zwycistwostaregoporzdku_desc:0 ""
+ZSO_rozwizaniesamorzduuczniowskiego:0 "Rozwiązanie samorządu uczniowskiego"
+ZSO_rozwizaniesamorzduuczniowskiego_desc:0 ""
+ZSO_marionetkowysamorzd:0 "Marionetkowy samorząd"
+ZSO_marionetkowysamorzd_desc:0 ""
