--- a/zsrr37/localisation/ideas_l_polish.yml
+++ b/zsrr37/localisation/ideas_l_polish.yml
@@ -2578,3 +2578,9 @@
  ZSO_samorzadowcy:0 "Koalicyjny rząd nauczycieli i Samorządu"
  ZSO_komuchy:0 "Dyktatura uczniowska"
  ZSO_status_quo:0 "Stary porządek"
+ ZSO_rip_samorzad:0 "Rozwiązany samorząd"
+ ZSO_marionetki:0 "Podporządkowany samorząd"
+ zso_nsopi:0 "Wybory zwyciężyła NSOPI"
+ zso_kpzs:0 "Wybory zwyciężyła KPZS"
+ zso_samorzad:0 "Wybory zwyciężyli samorządowcy"
+ zso_statusquo:0 "Wybory zwyciężyli zwolennicy obecnej władzy"
